--- a/dga.man
+++ b/dga.man
@@ -1,4 +1,4 @@
-.\" $XFree86$
+.\" $XFree86: xc/programs/xf86dga/dga.man,v 3.5 2001/01/27 18:21:12 dawes Exp $
 .\"
 .TH dga 1 __vendorversion__
 .SH NAME
